--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
+    "test": "vitest"
   },
   "type": "module",
   "keywords": [],
@@ -17,13 +18,18 @@
     "@neondatabase/serverless": "^1.0.1",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "cloudinary": "^2.7.0",
+    "datauri": "^4.1.0",
     "dotenv": "^17.1.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "supertest": "^7.1.3"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
