--- a/song-service/package.json
+++ b/song-service/package.json
@@ -17,8 +17,10 @@
     "@neondatabase/serverless": "^1.0.1",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/redis": "^4.0.11",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "redis": "^5.8.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
