--- a/song-service/package.json
+++ b/song-service/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
+    "dev": "nodemon --exec tsx src/index.ts",
     "test": "vitest"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
-    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/redis": "^4.0.11",
     "dotenv": "^17.2.1",
@@ -23,8 +23,11 @@
     "redis": "^5.8.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.6",
     "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
-    "typescript": "^5.9.2"
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
