--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -16,14 +16,18 @@
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
+    "@types/redis": "^4.0.11",
     "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "redis": "^5.8.0",
     "supertest": "^7.1.3"
   },
   "devDependencies": {
