--- a/song-service/package.json
+++ b/song-service/package.json
@@ -16,8 +16,10 @@
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/redis": "^4.0.11",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "redis": "^5.8.0"
