--- a/user-service/package.json
+++ b/user-service/package.json
@@ -24,6 +24,7 @@
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^6.0.0",
     "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
