--- a/user-service/package.json
+++ b/user-service/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "start": "node dist/src/index.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/src/index.js\"",
+    "vercel-build": "echo 'Build complete'",
+    "deploy": "vercel",
+    "deploy:prod": "vercel --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "devDependencies": {
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@vercel/node": "^3.0.0"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
