--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -7,7 +7,10 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "nodemon --exec tsx src/index.ts",
-    "dev:old": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "dev:old": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
+    "vercel-build": "echo 'Build complete'",
+    "deploy": "vercel",
+    "deploy:prod": "vercel --prod"
   },
   "type": "module",
   "keywords": [],
@@ -16,24 +19,26 @@
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
-    "@types/cors": "^2.8.19",
-    "@types/dotenv": "^8.2.3",
-    "@types/express": "^5.0.3",
-    "@types/multer": "^2.0.0",
-    "@types/redis": "^4.0.11",
+    "@vercel/node": "^3.0.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "redis": "^5.8.0",
-    "supertest": "^7.1.3"
+    "redis": "^5.8.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
+    "@types/redis": "^4.0.11",
     "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.3",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "tsx": "^4.19.2"
   }
 }
